@startuml

title __TEST2's Class Diagram__\n

  namespace sample {
    class sample.Ammo {
    }
  }
  

  namespace sample {
    class sample.Barriere {
    }
  }
  

  namespace sample {
    class sample.Bonus {
    }
  }
  

  namespace sample {
    class sample.BonusDamage {
    }
  }
  

  namespace sample {
    class sample.BonusHealth {
    }
  }
  

  namespace sample {
    class sample.BonusScoreX2 {
    }
  }
  

  namespace sample {
    class sample.BonusTimeSlowed {
    }
  }
  

  namespace sample {
    class sample.Enemy {
    }
  }
  

  namespace sample {
    class sample.Enemy120Level1 {
    }
  }
  

  namespace sample {
    class sample.Enemy120Level2 {
    }
  }
  

  namespace sample {
    class sample.Enemy180Level2 {
    }
  }
  

  namespace sample {
    class sample.Enemy60Level1 {
    }
  }
  

  namespace sample {
    class sample.GameEngine {
    }
  }
  

  namespace sample {
    class sample.GameObjects {
    }
  }
  

  namespace sample {
    class sample.Level {
    }
  }
  

  namespace sample {
    class sample.Level1 {
    }
  }
  

  namespace sample {
    class sample.Level2 {
    }
  }
  

  namespace sample {
    class sample.Player {
    }
  }
  

  namespace sample {
    class sample.Ship {
    }
  }
  

  namespace sample {
    class sample.Stars {
    }
  }
  

  sample.Ammo -up-|> sample.GameObjects
  sample.Barriere -up-|> sample.GameObjects
  sample.Bonus -up-|> sample.GameObjects
  sample.BonusDamage -up-|> sample.Bonus
  sample.BonusHealth -up-|> sample.Bonus
  sample.BonusScoreX2 -up-|> sample.Bonus
  sample.BonusTimeSlowed -up-|> sample.Bonus
  sample.Enemy -up-|> sample.Ship
  sample.Enemy120Level1 -up-|> sample.Enemy
  sample.Enemy120Level2 -up-|> sample.Enemy
  sample.Enemy180Level2 -up-|> sample.Enemy
  sample.Enemy60Level1 -up-|> sample.Enemy
  sample.GameObjects -up-|> javafx.scene.shape.Rectangle
  sample.Level -up-|> javafx.application.Application
  sample.Level1 -up-|> sample.Level
  sample.Level2 -up-|> sample.Level
  sample.Player .up.|> javafx.event.EventTarget
  sample.Player -up-|> sample.Ship
  sample.Ship -up-|> sample.GameObjects
  sample.Stars -up-|> sample.GameObjects


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
